Modify subscriptions table

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -120,6 +120,7 @@
 	"billing.address": "Adreça",
 	"billing.amount": "Import",
 	"billing.assistance": "Si us plau, <a href=\"{{url}}\"contacta amb nosaltres</a> per obtenir ajuda",
+	"billing.audit-log": "Registre d'activitat",
 	"billing.billing_details": "Dades de facturació",
 	"billing.budget": "Pressupost sota demanda",
 	"billing.budget_description": "Per evitar despeses excessives en els consums mensuals, us recomanem establir un límit mensual. Si no s'estableix un límit, es poden generar càrrecs inesperats pels consums que superin la quantitat assignada.",
@@ -132,17 +133,17 @@
 	"billing.company_address": "Adreça de l'empresa",
 	"billing.contact": "Contactar",
 	"billing.contact_name": "Persona de contacte",
+	"billing.continuous-training": "Entenament continu IA",
 	"billing.cost_over_limits": "Cost per sobre dels límits",
 	"billing.country": "País",
 	"billing.current-over-cost": "Sobrecost actual",
 	"billing.current-over-cost-help": "La factura amb els sobrecostos definitius s'enviarà el dia que finalitzi el cicle de facturació.",
+	"billing.current-plan": "Pla actual",
 	"billing.custom_plan": "Pla personalitzat",
 	"billing.delete-warning": "El vostre compte s'eliminarà permanentment set dies després que finalitzi el cicle de facturació.",
 	"billing.email": "Factures enviades a",
 	"billing.end-service": "Finalitza el teu servei",
 	"billing.end-subscription": "Finalitzar la subscripció",
-	"billing.enterprise_ready": "Llest par a l'empresa",
-	"billing.extra_paragraphs_cost": "Si se supera el límit de bloc de text emmagatzemat inclòs, cobrarem {{price}} / bloc de text emmagatzemat.",
 	"billing.features.anon": "Anonimat de dades",
 	"billing.features.apikey": "Clau d'API autoallotjada",
 	"billing.features.boost": "Potenciador d'indexació",
@@ -160,7 +161,6 @@
 	"billing.features.usage": "Analítica d'ús i retenció",
 	"billing.features.videos": "Vídeos i indexació d'àudio",
 	"billing.features.widget": "Accés al sistema de widgets",
-	"billing.free": "Gratuït",
 	"billing.history.link": "Historial",
 	"billing.history.title": "Historial de facturació",
 	"billing.hour": "hora",
@@ -169,13 +169,12 @@
 	"billing.invalid_address": "L'adreça proporcionada no és vàlida",
 	"billing.invalid_card": "No hem pogut validar la teva targeta.",
 	"billing.invalid_vat": "Si us plau, afegiu el codi del país. Ex: ESB000000N",
+	"billing.max-file-size": "Mida màxima de fitxer",
 	"billing.month": "Mes",
 	"billing.my-subscription": "La meva subscripció",
 	"billing.next-payment": "Proper pagament",
 	"billing.not_company": "No soc una empresa",
-	"billing.on_premise_cost": "Amb <strong>NucliaDB On-prem</strong> no comporta cap cost addicional.",
 	"billing.order_number": "Número de comanda",
-	"billing.paragraphs_per_file": "Un fitxer de text de 10 pàgines conté aproximadament 300 blocs de text",
 	"billing.parameter.files": "Quants documents?",
 	"billing.parameter.generative": "Quantes respostes generatives?",
 	"billing.parameter.media": "Quantes hores de vídeos/àudios?",
@@ -191,19 +190,9 @@
 	"billing.phone_placeholder": "e.g. +34 000 000 000",
 	"billing.postal_code": "Còdi postal",
 	"billing.quotas.files": "Nombre màxim de fitxers",
-	"billing.quotas.files-up-to": "Arxius fins a",
 	"billing.quotas.generative": "Consulta generativa",
-	"billing.quotas.ingestion": "Ingestió",
 	"billing.quotas.kbs": "Nombre de Knowledge Boxes",
-	"billing.quotas.media": "Indexació de vídeo i àudio",
-	"billing.quotas.paragraphs": "Bloc de text emmagatzemat",
-	"billing.quotas.paragraphs_processed": "Nombre de blocs de text",
-	"billing.quotas.predict": "Consulta de classificació",
-	"billing.quotas.search": "Cerca",
-	"billing.quotas.searches": "Consulta de cerca semàntica",
-	"billing.quotas.storage": "Emmagatzematge",
 	"billing.quotas.train": "Entrenar",
-	"billing.quotas.training": "Entrenament",
 	"billing.quotas.up-to": "Fins a",
 	"billing.quotas_label": "Quotes mensuals",
 	"billing.reactivate": "Reactivar",
@@ -215,6 +204,7 @@
 	"billing.review_confirm": "Revisar i confirmar",
 	"billing.save_budget": "Guardar límit de pressupost",
 	"billing.save_continue": "Desar i Continuar",
+	"billing.search-endpoints": "Endpoints de cerca: /chat, /ask, /find, /discover, /summarise",
 	"billing.self_hosted": "<a href=\"{{ url }}\">Poseu-vos en contacte</a> amb nosaltres per conèixer tots els detalls de pagament en cas d'autoallotjar les vostres dades  mitjançant NucliaDB",
 	"billing.state": "Província",
 	"billing.subscribed": "Subscrit",
@@ -225,8 +215,8 @@
 	"billing.subscription-renewed": "Has renovat la teva subscripció a Nuclia",
 	"billing.subscription_tier": "Nivell de subscripció",
 	"billing.success": "Subscripció satisfactòria",
+	"billing.support": "Suport",
 	"billing.tier": "Nivell",
-	"billing.trial.title": "{{days}} dies de prova",
 	"billing.unit": "unitat",
 	"billing.unlimited": "Il·limitat",
 	"billing.unsubscribe-error": "Error en cancel·lar la subscripció",
@@ -243,6 +233,7 @@
 	"billing.usage.title": "Cost del sobreconsum",
 	"billing.vat_id": "VAT ID",
 	"billing.without_vat": "Preus sense IVA",
+	"billing.year": "Any",
 	"confirm.delete_body": "Eliminar recurs",
 	"confirm.delete_title": "Segur que vols eliminar el recurs?",
 	"dashboard-home.desktop.available-for": "Disponible per a Windows, Mac i Linux",
