--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -121,6 +121,7 @@
 	"billing.address": "Address",
 	"billing.amount": "Amount",
 	"billing.assistance": "Please, <a href=\"{{url}}\">contact us</a> for assistance.",
+	"billing.audit-log": "Audit log",
 	"billing.billing_details": "Billing details",
 	"billing.budget": "On-demand budget",
 	"billing.budget_description": "To prevent overspending on monthly consumables, we recommend setting a monthly economic limit.<br> Failing to set a limit may result in unexpected charges for any consumption beyond the allotted amount.",
@@ -133,17 +134,17 @@
 	"billing.company_address": "Company address",
 	"billing.contact": "Contact us",
 	"billing.contact_name": "Contact name",
+	"billing.continuous-training": "Continuous AI training",
 	"billing.cost_over_limits": "Cost over limits",
 	"billing.country": "Country",
 	"billing.current-over-cost": "Current over cost",
 	"billing.current-over-cost-help": "The invoice with final over costs will be sent to you on the day your billing cycle ends.",
+	"billing.current-plan": "Current plan",
 	"billing.custom_plan": "Custom plan",
 	"billing.delete-warning": "Your account will be permanently deleted seven days after the billing cycle ends.",
 	"billing.email": "Invoices sent to",
 	"billing.end-service": "End your service",
 	"billing.end-subscription": "End subscription",
-	"billing.enterprise_ready": "We are enterprise ready",
-	"billing.extra_paragraphs_cost": "If the stored text block limit included is exceeded, we will charge {{price}} / stored text block.",
 	"billing.features.anon": "Data Anonymization",
 	"billing.features.apikey": "Self-hosted API key",
 	"billing.features.boost": "Indexing booster",
@@ -161,7 +162,6 @@
 	"billing.features.usage": "Usage analytics and retention",
 	"billing.features.videos": "Videos and audio indexing",
 	"billing.features.widget": "Widget system access",
-	"billing.free": "Free",
 	"billing.history.link": "History",
 	"billing.history.title": "Account billing history",
 	"billing.hour": "hour",
@@ -170,13 +170,12 @@
 	"billing.invalid_address": "The address provided is not valid",
 	"billing.invalid_card": "We were unable to validate your card.",
 	"billing.invalid_vat": "Please add the country code. e.g: ESB000000N",
+	"billing.max-file-size": "Max file size",
 	"billing.month": "Month",
 	"billing.my-subscription": "My subscription",
 	"billing.next-payment": "Next payment",
 	"billing.not_company": "I'm not a company",
-	"billing.on_premise_cost": "With <strong>NucliaDB On-prem</strong> does not carry any extra cost.",
 	"billing.order_number": "Order number",
-	"billing.paragraphs_per_file": "A 10-page text file contains approximately 300 text blocks",
 	"billing.parameter.files": "How many documents?",
 	"billing.parameter.generative": "How many generative answers?",
 	"billing.parameter.media": "How many hours of videos/audios?",
@@ -192,19 +191,9 @@
 	"billing.phone_placeholder": "e.g. +34 000 000 000",
 	"billing.postal_code": "ZIP",
 	"billing.quotas.files": "Maximum number of files",
-	"billing.quotas.files-up-to": "Files up to",
 	"billing.quotas.generative": "Generative query",
-	"billing.quotas.ingestion": "Ingestion",
 	"billing.quotas.kbs": "Number of Knowledge Boxes",
-	"billing.quotas.media": "Video & audio indexing",
-	"billing.quotas.paragraphs": "Text block stored",
-	"billing.quotas.paragraphs_processed": "Number of text blocks",
-	"billing.quotas.predict": "Classification query",
-	"billing.quotas.search": "Search",
-	"billing.quotas.searches": "Semantic search query",
-	"billing.quotas.storage": "Storage",
 	"billing.quotas.train": "Train",
-	"billing.quotas.training": "Training",
 	"billing.quotas.up-to": "Up to",
 	"billing.quotas_label": "Monthly quotas",
 	"billing.reactivate": "Reactivate",
@@ -216,6 +205,7 @@
 	"billing.review_confirm": "Review & Confirm",
 	"billing.save_budget": "Save as budget limit",
 	"billing.save_continue": "Save & Continue",
+	"billing.search-endpoints": "Search requests endpoints: /chat, /ask, /find, /discover, /summarise",
 	"billing.self_hosted": "<a href=\"{{ url }}\">Contact us</a> if you want your data self-hosted using NucliaDB to know all payment details.",
 	"billing.state": "State",
 	"billing.subscribed": "Subscribed",
@@ -226,8 +216,8 @@
 	"billing.subscription-renewed": "You renewed your subscription to Nuclia",
 	"billing.subscription_tier": "Subscription tier",
 	"billing.success": "Successful subscription",
+	"billing.support": "Support",
 	"billing.tier": "Tier",
-	"billing.trial.title": "{{days}} days trial",
 	"billing.unit": "unit",
 	"billing.unlimited": "Unlimited",
 	"billing.unsubscribe-error": "Error when unsubscribing",
@@ -244,6 +234,7 @@
 	"billing.usage.title": "Overconsumption cost",
 	"billing.vat_id": "VAT ID",
 	"billing.without_vat": "Prices without VAT",
+	"billing.year": "Year",
 	"confirm.delete_body": "Delete resource",
 	"confirm.delete_title": "Are you sure you want to delete this resource?",
 	"dashboard-home.desktop.available-for": "Available for Windows, Mac and Linux",
