--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -120,6 +120,7 @@
 	"billing.address": "Dirección",
 	"billing.amount": "Importe",
 	"billing.assistance": "Por favor, <a href=\"{{url}}\">contacta con nosotros</a> para obtener ayuda.",
+	"billing.audit-log": "Registro de actividad",
 	"billing.billing_details": "Datos de facturación",
 	"billing.budget": "Presupuesto bajo demanda",
 	"billing.budget_description": "Para evitar gastos excesivos en los consumos mensuales, recomendamos establecer un límite mensual.<br> Si no se establece un límite, se pueden generar cargos inesperados por los consumos que excedan la cantidad asignada.",
@@ -132,17 +133,17 @@
 	"billing.company_address": "Dirección de la empresa",
 	"billing.contact": "Contactar",
 	"billing.contact_name": "Persona de contacto",
+	"billing.continuous-training": "Entrenamiento continuo IA",
 	"billing.cost_over_limits": "Coste al exceder los límites",
 	"billing.country": "País",
 	"billing.current-over-cost": "Sobrecoste actual",
 	"billing.current-over-cost-help": "La factura con los sobrecostes definitivos se te enviará el día que finalice tu ciclo de facturación.",
+	"billing.current-plan": "Plan actual",
 	"billing.custom_plan": "Plan personalizado",
 	"billing.delete-warning": "Su cuenta se eliminará permanentemente siete días después de que finalice el ciclo de facturación.",
 	"billing.email": "Facturas enviadas a",
 	"billing.end-service": "Finaliza tu servicio",
 	"billing.end-subscription": "Finalizar la suscripción",
-	"billing.enterprise_ready": "Listo para la empresa",
-	"billing.extra_paragraphs_cost": "Si se excede el límite de bloques de texto almacenado incluido, cobraremos {{price}} / bloque de texto almacenado.",
 	"billing.features.anon": "Anonimización de datos",
 	"billing.features.apikey": "Clave de API autohospedada",
 	"billing.features.boost": "Refuerzo de indexación",
@@ -160,7 +161,6 @@
 	"billing.features.usage": "Análisis de uso y retención",
 	"billing.features.videos": "Indexación de videos y audio",
 	"billing.features.widget": "Acceso al sistema de widgets",
-	"billing.free": "Gratuito",
 	"billing.history.link": "Historial",
 	"billing.history.title": "Historial de facturación",
 	"billing.hour": "hora",
@@ -169,13 +169,12 @@
 	"billing.invalid_address": "La dirección proporcionada no es válida",
 	"billing.invalid_card": "No pudimos validar tu tarjeta.",
 	"billing.invalid_vat": "Por favor agregue el código de país. Por ejemplo: ESB000000N",
+	"billing.max-file-size": "Tamaño máximo de archivo",
 	"billing.month": "Mes",
 	"billing.my-subscription": "Mi suscripción",
 	"billing.next-payment": "Próximo pago",
 	"billing.not_company": "No soy una empresa",
-	"billing.on_premise_cost": "Con <strong>NucliaDB On-prem</strong> no conlleva ningún coste extra.",
 	"billing.order_number": "Número de pedido",
-	"billing.paragraphs_per_file": "Un archivo de texto de 10 páginas contiene aproximadamente 300 bloques de texto.",
 	"billing.parameter.files": "¿Cuántos documentos?",
 	"billing.parameter.generative": "¿Cuántas respuestas generativas?",
 	"billing.parameter.media": "¿Cuántas horas de videos/audios?",
@@ -191,19 +190,9 @@
 	"billing.phone_placeholder": "e.g. +34 000 000 000",
 	"billing.postal_code": "Código postal",
 	"billing.quotas.files": "Cantidad máxima de archivos",
-	"billing.quotas.files-up-to": "Archivos hasta",
 	"billing.quotas.generative": "Consulta generativa",
-	"billing.quotas.ingestion": "Ingestión",
 	"billing.quotas.kbs": "Número de Knowledge Boxes",
-	"billing.quotas.media": "Indexación de video y audio",
-	"billing.quotas.paragraphs": "Bloque de texto almacenado",
-	"billing.quotas.paragraphs_processed": "Número de bloques de texto",
-	"billing.quotas.predict": "Consulta de clasificación",
-	"billing.quotas.search": "Búsqueda",
-	"billing.quotas.searches": "Consulta de búsqueda semántica",
-	"billing.quotas.storage": "Almacenamiento",
 	"billing.quotas.train": "Entrenar",
-	"billing.quotas.training": "Entrenamiento",
 	"billing.quotas.up-to": "Hasta",
 	"billing.quotas_label": "Cuotas mensuales",
 	"billing.reactivate": "Reactivar",
@@ -215,6 +204,7 @@
 	"billing.review_confirm": "Revisar y confirmar",
 	"billing.save_budget": "Guardar límite de presupuesto",
 	"billing.save_continue": "Guardar y Continuar",
+	"billing.search-endpoints": "Endpoints de búsqueda: /chat, /ask, /find, /discover, /summarise",
 	"billing.self_hosted": "<a href=\"{{ url }}\">Póngase en contacto</a> con nosotros para conocer todos los detalles de pago en caso de autoalojar sus datos mediante NucliaDB",
 	"billing.state": "Provincia",
 	"billing.subscribed": "Suscrito",
@@ -225,8 +215,8 @@
 	"billing.subscription-renewed": "Has renovado tu suscripción a Nuclia",
 	"billing.subscription_tier": "Nivel de suscripción",
 	"billing.success": "Suscripción exitosa",
+	"billing.support": "Soporte",
 	"billing.tier": "Nivel",
-	"billing.trial.title": "{{days}} días de prueba",
 	"billing.unit": "unidad",
 	"billing.unlimited": "Ilimitado",
 	"billing.unsubscribe-error": "Error al cancelar la suscripción",
@@ -243,6 +233,7 @@
 	"billing.usage.title": "Coste del sobreconsumo",
 	"billing.vat_id": "VAT ID",
 	"billing.without_vat": "Precios sin IVA",
+	"billing.year": "Año",
 	"confirm.delete_body": "Eliminar recurso",
 	"confirm.delete_title": "¿Seguro que quieres eliminar este recurso?",
 	"dashboard-home.desktop.available-for": "Disponible para Windows, Mac y Linux",
