--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -121,6 +121,7 @@
 	"billing.address": "Adresse",
 	"billing.amount": "Montant",
 	"billing.assistance": "Veuillez <a href=\"{{url}}\">nous contacter</a> pour obtenir de l'aide.",
+	"billing.audit-log": "Journal d'activité",
 	"billing.billing_details": "Détails de la facturation",
 	"billing.budget": "Budget à la demande",
 	"billing.budget_description": "Pour éviter de dépenser trop en consommables mensuels, nous vous recommandons de fixer une limite économique mensuelle.<br> Le fait de ne pas définir de limite peut entraîner des frais inattendus pour toute consommation dépassant le montant alloué.",
@@ -133,17 +134,17 @@
 	"billing.company_address": "Adresse de la société",
 	"billing.contact": "Contactez nous",
 	"billing.contact_name": "Nom du contact",
+	"billing.continuous-training": "Formation continue IA",
 	"billing.cost_over_limits": "Coût dépassant les limites",
 	"billing.country": "Pays",
 	"billing.current-over-cost": "Surcoût actuel",
 	"billing.current-over-cost-help": "La facture avec les surcoûts finaux vous sera envoyée le jour de la fin de votre cycle de facturation.",
+	"billing.current-plan": "Plan actuel",
 	"billing.custom_plan": "Forfait personnalisé",
 	"billing.delete-warning": "Votre compte sera définitivement supprimé sept jours après la fin du cycle de facturation.",
 	"billing.email": "Factures envoyées à",
 	"billing.end-service": "Mettre fin à votre service",
 	"billing.end-subscription": "Mettre fin à l'abonnement",
-	"billing.enterprise_ready": "Nous sommes prêts pour l'entreprise",
-	"billing.extra_paragraphs_cost": "Si la limite de blocs de texte stockés inclus est dépassée, nous facturerons {{price}} / bloc de texte stocké.",
 	"billing.features.anon": "Anonymisation des données",
 	"billing.features.apikey": "Clé API auto-hébergée",
 	"billing.features.boost": "Booster d’indexation",
@@ -161,7 +162,6 @@
 	"billing.features.usage": "Analyse d’utilisation et rétention",
 	"billing.features.videos": "Indexation de vidéos et audio",
 	"billing.features.widget": "Accès au système de widgets",
-	"billing.free": "Libre",
 	"billing.history.link": "L'histoire",
 	"billing.history.title": "Historique de facturation du compte",
 	"billing.hour": "heure",
@@ -170,13 +170,12 @@
 	"billing.invalid_address": "L'adresse fournie n'est pas valide",
 	"billing.invalid_card": "Nous n'avons pas pu valider votre carte.",
 	"billing.invalid_vat": "Veuillez ajouter le code du pays. par exemple : ESB000000N",
+	"billing.max-file-size": "Taille maximale du fichier",
 	"billing.month": "Mois",
 	"billing.my-subscription": "Mon abonnement",
 	"billing.next-payment": "Prochain paiement",
 	"billing.not_company": "Je ne suis pas une entreprise",
-	"billing.on_premise_cost": "Avec <strong>NucliaDB On-prem</strong> n’entraîne aucun coût supplémentaire.",
 	"billing.order_number": "Numéro de commande",
-	"billing.paragraphs_per_file": "Un fichier texte de 10 pages contient environ 300 blocs de texte",
 	"billing.parameter.files": "Combien de documents ?",
 	"billing.parameter.generative": "Combien de réponses génératives ?",
 	"billing.parameter.media": "Combien d'heures de vidéos/audios ?",
@@ -192,19 +191,9 @@
 	"billing.phone_placeholder": "par exemple. +34 000 000 000",
 	"billing.postal_code": "Zip *: français",
 	"billing.quotas.files": "Nombre maximum de fichiers",
-	"billing.quotas.files-up-to": "Fichiers jusqu'à",
 	"billing.quotas.generative": "Requête générative",
-	"billing.quotas.ingestion": "Ingestion",
 	"billing.quotas.kbs": "Nombre de Knowledge Boxes",
-	"billing.quotas.media": "Indexation vidéo et audio",
-	"billing.quotas.paragraphs": "Bloc de texte stocké",
-	"billing.quotas.paragraphs_processed": "Nombre de blocs de texte",
-	"billing.quotas.predict": "Requête de classification",
-	"billing.quotas.search": "Recherche",
-	"billing.quotas.searches": "Requête de recherche sémantique",
-	"billing.quotas.storage": "Espace de rangement",
 	"billing.quotas.train": "Train",
-	"billing.quotas.training": "Entraînement",
 	"billing.quotas.up-to": "Jusqu'à",
 	"billing.quotas_label": "Quotas mensuels",
 	"billing.reactivate": "Réactiver",
@@ -216,6 +205,7 @@
 	"billing.review_confirm": "Examiner et confirmer",
 	"billing.save_budget": "Enregistrer comme limite budgétaire",
 	"billing.save_continue": "Enregistrer continuer",
+	"billing.search-endpoints": "Endpoints de recherche: /chat, /ask, /find, /discover, /summarise",
 	"billing.self_hosted": "<a href=\"{{ url }}\">Contactez-nous</a> si vous souhaitez que vos données soient auto-hébergées à l'aide de NucliaDB pour connaître tous les détails de paiement.",
 	"billing.state": "Etat",
 	"billing.subscribed": "Souscrit",
@@ -226,8 +216,8 @@
 	"billing.subscription-renewed": "Vous avez renouvelé votre abonnement à Nuclia",
 	"billing.subscription_tier": "Niveau d'abonnement",
 	"billing.success": "Inscription réussie",
+	"billing.support": "Soutien",
 	"billing.tier": "Étage",
-	"billing.trial.title": "{{days}}  jours d'essai",
 	"billing.unit": "Unité",
 	"billing.unlimited": "Illimité",
 	"billing.unsubscribe-error": "Erreur lors de l'annulation de l'abonnement",
@@ -244,6 +234,7 @@
 	"billing.usage.title": "Coût de surconsommation",
 	"billing.vat_id": "Numéro de TVA",
 	"billing.without_vat": "Prix sans TVA",
+	"billing.year": "Année",
 	"confirm.delete_body": "Supprimer la ressource",
 	"confirm.delete_title": "Voulez-vous vraiment supprimer cette ressource?",
 	"dashboard-home.desktop.available-for": "Disponible pour Windows, Mac et Linux",
@@ -371,7 +362,7 @@
 	"generic.origin": "Origine",
 	"generic.owner": "Propriétaire",
 	"generic.page": "Page",
-	"generic.pagination": " {{current}} sur {{total}}",
+	"generic.pagination": " {{current}} sur {{total}}",
 	"generic.preferences": "Préférences",
 	"generic.presence": "Présence",
 	"generic.previous": "Page précédente",
