Update pending to be processed when switching KB

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -264,7 +264,8 @@
 	"dashboard-home.kb-content.latest-resources.no-upload": "No resource uploaded yet",
 	"dashboard-home.kb-content.latest-resources.title": "Latest resources processed",
 	"dashboard-home.kb-content.processing-queue.no-pending": "No resource pending to be processed",
-	"dashboard-home.kb-content.processing-queue.pending": "{{count}} resources are pending to be processed.",
+	"dashboard-home.kb-content.processing-queue.pending": "1 resource is pending to be processed.",
+	"dashboard-home.kb-content.processing-queue.pendings": "{{count}} resources are pending to be processed.",
 	"dashboard-home.kb-content.processing-queue.title": "Processing queue",
 	"dashboard-home.kb-details.endpoint": "NucliaDB API endpoint",
 	"dashboard-home.kb-details.language-model": "Language model applied",
