--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -263,7 +263,8 @@
 	"dashboard-home.kb-content.latest-resources.no-upload": "Aún no se ha subido ningún recurso",
 	"dashboard-home.kb-content.latest-resources.title": "Últimos recursos procesados",
 	"dashboard-home.kb-content.processing-queue.no-pending": "Ningún recurso pendiente de procesar",
-	"dashboard-home.kb-content.processing-queue.pending": "{{count}} recursos están pendientes de ser procesados.",
+	"dashboard-home.kb-content.processing-queue.pending": "1 recurso está pendiente de ser procesado.",
+	"dashboard-home.kb-content.processing-queue.pendings": "{{count}} recursos están pendientes de ser procesados.",
 	"dashboard-home.kb-content.processing-queue.title": "Cola de procesamiento",
 	"dashboard-home.kb-details.endpoint": "NucliaDB API endpoint",
 	"dashboard-home.kb-details.language-model": "Modelo de lenguaje aplicado",
