--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -264,7 +264,8 @@
 	"dashboard-home.kb-content.latest-resources.no-upload": "Aucune ressource téléchargée pour le moment",
 	"dashboard-home.kb-content.latest-resources.title": "Dernières ressources traitées",
 	"dashboard-home.kb-content.processing-queue.no-pending": "Aucune ressource en attente de traitement",
-	"dashboard-home.kb-content.processing-queue.pending": "{{count}}  ressources sont en attente de traitement.",
+	"dashboard-home.kb-content.processing-queue.pending": "1 ressource est en attente de traitement.",
+	"dashboard-home.kb-content.processing-queue.pendings": "{{count}}  ressources sont en attente de traitement.",
 	"dashboard-home.kb-content.processing-queue.title": "File d'attente de traitement",
 	"dashboard-home.kb-details.endpoint": "NucliaDB API endpoint",
 	"dashboard-home.kb-details.language-model": "Modèle de langage appliqué",
