--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -263,7 +263,8 @@
 	"dashboard-home.kb-content.latest-resources.no-upload": "Encara no s'ha penjat cap recurs",
 	"dashboard-home.kb-content.latest-resources.title": "Últims recursos processats",
 	"dashboard-home.kb-content.processing-queue.no-pending": "No hi ha cap recurs pendent de processar",
-	"dashboard-home.kb-content.processing-queue.pending": "{{count}} recursos estan pendents de processar.",
+	"dashboard-home.kb-content.processing-queue.pending": "1 recurs està pendent de processar.",
+	"dashboard-home.kb-content.processing-queue.pendings": "{{count}} recursos estan pendents de processar.",
 	"dashboard-home.kb-content.processing-queue.title": "Cua de processament",
 	"dashboard-home.kb-details.endpoint": "NucliaDB API endpoint",
 	"dashboard-home.kb-details.language-model": "Model lingüístic aplicat",
