[sc-8060] new dashboard home page (#1206)
* Use new sistema’s home-container in NucliaDB Admin

* New dashboard home page

  - New layout and more information displayed on home page
  - New `metrics.service` for the logic shared between account home and dashboard home around chart data
  - Improve line charts
    - add unit on y-axis
    - remove first grid line which was cut on top of the chart
    - display the y-axis text on top of grid lines

* Fix prod build

* Update pending to be processed when switching KB

* Add missing async pipe

--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -254,6 +254,35 @@
 	"billing.without_vat": "Precios sin IVA",
 	"confirm.delete_body": "Eliminar recurso",
 	"confirm.delete_title": "¿Seguro que quieres eliminar este recurso?",
+	"dashboard-home.desktop.available-for": "Disponible para Windows, Mac y Linux",
+	"dashboard-home.desktop.description": "La forma más fácil y rápida de subir datos a Nuclia desde (casi) cualquier fuente de datos",
+	"dashboard-home.desktop.open": "Abrir Nuclia Desktop",
+	"dashboard-home.go-to.kb-settings": "Ir a la configuración del Cuadro de conocimiento",
+	"dashboard-home.go-to.pending-list": "Ir a la lista de recursos pendientes de procesar",
+	"dashboard-home.go-to.resource-list": "Ir a la lista de recursos",
+	"dashboard-home.kb-content.latest-resources.no-upload": "Aún no se ha subido ningún recurso",
+	"dashboard-home.kb-content.latest-resources.title": "Últimos recursos procesados",
+	"dashboard-home.kb-content.processing-queue.no-pending": "Ningún recurso pendiente de procesar",
+	"dashboard-home.kb-content.processing-queue.pending": "1 recurso está pendiente de ser procesado.",
+	"dashboard-home.kb-content.processing-queue.pendings": "{{count}} recursos están pendientes de ser procesados.",
+	"dashboard-home.kb-content.processing-queue.title": "Cola de procesamiento",
+	"dashboard-home.kb-details.endpoint": "NucliaDB API endpoint",
+	"dashboard-home.kb-details.language-model": "Modelo de lenguaje aplicado",
+	"dashboard-home.kb-details.slug": "Knowledge Box slug",
+	"dashboard-home.kb-details.title": "Detalles del Knowledge Box ",
+	"dashboard-home.kb-details.uid": "Knowledge Box UID",
+	"dashboard-home.kb-metrics.title": "Contenido del Knowledge Box",
+	"dashboard-home.kb-metrics.total.fields": "Campos",
+	"dashboard-home.kb-metrics.total.paragraphs": "Bloques de texto",
+	"dashboard-home.kb-metrics.total.sentences": "Vectores",
+	"dashboard-home.kb-metrics.total.title": "Recursos",
+	"dashboard-home.state.private": "Knowledge Box privada",
+	"dashboard-home.state.published": "Knowledge Box público",
+	"dashboard-home.upload-block.description": "Subir archivos, carpetas, enlaces.",
+	"dashboard-home.upload-block.description-desktop": " o elige una fuente para trabajar con Nuclia con tu propia base de datos.",
+	"dashboard-home.upload-block.title": "Trabaja con tus datos",
+	"dashboard-home.usage.fullscreen": "Mostrar gráfico en pantalla completa",
+	"dashboard-home.usage.title": "Uso",
 	"dataset.delete": "Eliminar muestra",
 	"dataset.delete_failed": "Error al eliminar el conjunto de datos de muestra",
 	"dataset.delete_in_progress": "Eliminación de un conjunto de datos de muestra",
@@ -464,6 +493,13 @@
 	"language.ru": "Ruso",
 	"language.sv": "Sueco",
 	"language.tr": "Turco",
+	"metrics.answers.title": "Respuestas generativas",
+	"metrics.period.last-12-months": "Últimos 12 meses",
+	"metrics.period.last-30-days": "Últimos 30 días",
+	"metrics.processing.title": "Tiempo de procesamiento",
+	"metrics.search.title": "Consultas de búsqueda",
+	"metrics.units.hours": "Horas",
+	"metrics.units.queries": "Consultas",
 	"modal.create_link.csv-file": "Enlaces desde un archivo CSV",
 	"modal.create_link.link-to.file": "un archivo en línea",
 	"modal.create_link.link-to.label": "Enlace a:",
@@ -683,6 +719,7 @@
 	"sidenav.api_keys": "Claves de api",
 	"sidenav.billing": "Pago",
 	"sidenav.classification": "Conjuntos de etiquetas",
+	"sidenav.home": "Inicio",
 	"sidenav.list": "Listado de recursos",
 	"sidenav.manage-kbs": "Knowledge Boxes",
 	"sidenav.nua-keys": "Claves NUA",
@@ -754,11 +791,6 @@
 	"stash.description": "Descripción",
 	"stash.email": "Servidor de correo",
 	"stash.empty_kb": "!La Knowledge Box aun está vacía!",
-	"stash.enable_stash_email": "Habilitar correo electrónico",
-	"stash.home.link": "Inicio",
-	"stash.home.upload-block.description": "Subir archivos, carpetas, enlaces.",
-	"stash.home.upload-block.description-desktop": " o elige una fuente para trabajar con Nuclia con tu propia base de datos.",
-	"stash.home.upload-block.title": "Trabaja con tus datos",
 	"stash.invited_user": "Hemos enviado un correo a {{user}} invitándolo en esta Knowledge Box",
 	"stash.kb_name_invalid": "El nombre de la Knowledge Box no es válido",
 	"stash.kb_slug_invalid": "El slug de la caja de conocimiento no es válido",
@@ -803,9 +835,9 @@
 	"stash.settings.processes.training.start": "Empezar a entrenar",
 	"stash.settings.processes.training.stop": "Dejar de entrenar",
 	"stash.settings.processes.training.time_requirement": "El tiempo necesario para entrenar es de unas {{hours}} horas que se restarán de las horas disponibles.",
-	"stash.state.label": "Estado: ",
-	"stash.state.private": "privado",
-	"stash.state.published": "público",
+	"stash.settings.status.label": "Estado",
+	"stash.settings.status.private": "El Knowledge Box es <strong>privado</strong>",
+	"stash.settings.status.published": "El Knowledge Box es <strong>público</strong>",
 	"stash.stats": "Datos",
 	"stash.title": "Título de la caja",
 	"stash.upload.desktop.description": "La forma más fácil y rápida de cargar datos en Nuclia desde sus fuentes de datos",
@@ -829,14 +861,6 @@
 	"stash.valid_domains_label": "Dominios desde donde se puede enviar correo electrónico",
 	"stash.valid_emails": "Añada, separado por comas, las direcciones de correos electrónicos de los cuales se aceptará correo electrónico. ",
 	"stash.valid_emails_label": "Correos electrónicos",
-	"stats.endpoint": "NucliaDB API endpoint",
-	"stats.get_started": "Empezar",
-	"stats.processing_time": "Tiempo de procesamiento",
-	"stats.total.fields": "Campos",
-	"stats.total.paragraphs": "Bloques de texto",
-	"stats.total.sentences": "Vectores",
-	"stats.total.title": "Recursos",
-	"stats.total_search": "Total operaciones de búsqueda",
 	"synonyms.add-form.bidirectional-checkbox": "Bidireccional",
 	"synonyms.add-form.main-word-label": "Palabra principal",
 	"synonyms.add-form.synonyms-label": "Sinónimos separados por comas",
