--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -255,6 +255,35 @@
 	"billing.without_vat": "Prix sans TVA",
 	"confirm.delete_body": "Supprimer la ressource",
 	"confirm.delete_title": "Voulez-vous vraiment supprimer cette ressource?",
+	"dashboard-home.desktop.available-for": "Disponible pour Windows, Mac et Linux",
+	"dashboard-home.desktop.description": "Le moyen le plus simple et le plus rapide de télécharger des données vers Nuclia à partir de (presque) n'importe quelle source de données",
+	"dashboard-home.desktop.open": "Ouvrir Nuclia Desktop",
+	"dashboard-home.go-to.kb-settings": "Accédez aux paramètres de la Knowledge Box",
+	"dashboard-home.go-to.pending-list": "Aller à la liste des ressources en attente de traitement",
+	"dashboard-home.go-to.resource-list": "Aller à la liste des ressources",
+	"dashboard-home.kb-content.latest-resources.no-upload": "Aucune ressource téléchargée pour le moment",
+	"dashboard-home.kb-content.latest-resources.title": "Dernières ressources traitées",
+	"dashboard-home.kb-content.processing-queue.no-pending": "Aucune ressource en attente de traitement",
+	"dashboard-home.kb-content.processing-queue.pending": "1 ressource est en attente de traitement.",
+	"dashboard-home.kb-content.processing-queue.pendings": "{{count}}  ressources sont en attente de traitement.",
+	"dashboard-home.kb-content.processing-queue.title": "File d'attente de traitement",
+	"dashboard-home.kb-details.endpoint": "NucliaDB API endpoint",
+	"dashboard-home.kb-details.language-model": "Modèle de langage appliqué",
+	"dashboard-home.kb-details.slug": "Knowledge Box slug",
+	"dashboard-home.kb-details.title": "Détails de la Knowledge Box ",
+	"dashboard-home.kb-details.uid": "Knowledge Box UID",
+	"dashboard-home.kb-metrics.title": "Contenu de la Knowledge Box",
+	"dashboard-home.kb-metrics.total.fields": "Champs",
+	"dashboard-home.kb-metrics.total.paragraphs": "Blocs de texte",
+	"dashboard-home.kb-metrics.total.sentences": "Vecteurs",
+	"dashboard-home.kb-metrics.total.title": "Ressources",
+	"dashboard-home.state.private": "Knowledge Box privée",
+	"dashboard-home.state.published": "Knowledge Box publique",
+	"dashboard-home.upload-block.description": "Téléchargez des fichiers, des dossiers, des liens",
+	"dashboard-home.upload-block.description-desktop": " ou choisissez une source pour travailler avec Nuclia avec votre propre base de données.",
+	"dashboard-home.upload-block.title": "Travaillez avec vos données",
+	"dashboard-home.usage.fullscreen": "Afficher le graphique en plein écran",
+	"dashboard-home.usage.title": "Usage",
 	"dataset.delete": "Supprimer un exemple d'ensemble de données",
 	"dataset.delete_failed": "Échec de la suppression de l'exemple d'ensemble de données",
 	"dataset.delete_in_progress": "Suppression d'un exemple d'ensemble de données",
@@ -465,6 +494,13 @@
 	"language.ru": "Russe",
 	"language.sv": "Suédois",
 	"language.tr": "Turc",
+	"metrics.answers.title": "Réponses génératives",
+	"metrics.period.last-12-months": "12 derniers mois",
+	"metrics.period.last-30-days": "30 derniers jours",
+	"metrics.processing.title": "Temps de traitement",
+	"metrics.search.title": "Requêtes de recherche",
+	"metrics.units.hours": "Heures",
+	"metrics.units.queries": "Requêtes",
 	"modal.create_link.csv-file": "Liens à partir d'un fichier CSV",
 	"modal.create_link.link-to.file": "un fichier en ligne",
 	"modal.create_link.link-to.label": "Lien vers:",
@@ -684,6 +720,7 @@
 	"sidenav.api_keys": "Clés API",
 	"sidenav.billing": "Paiement",
 	"sidenav.classification": "Familles d'étiquettes",
+	"sidenav.home": "Accueil",
 	"sidenav.list": "Liste des ressources",
 	"sidenav.manage-kbs": "Knowledge Boxes",
 	"sidenav.nua-keys": "Clés NUA",
@@ -755,11 +792,6 @@
 	"stash.description": "La description",
 	"stash.email": "Serveur de messagerie",
 	"stash.empty_kb": "La Knowledge Box est vide",
-	"stash.enable_stash_email": "Activer l'e-mail",
-	"stash.home.link": "Accueil",
-	"stash.home.upload-block.description": "Téléchargez des fichiers, des dossiers, des liens",
-	"stash.home.upload-block.description-desktop": " ou choisissez une source pour travailler avec Nuclia avec votre propre base de données.",
-	"stash.home.upload-block.title": "Travaillez avec vos données",
 	"stash.invited_user": "Nous avons envoyé un e-mail d'invitation à {{user}} pour rejoindre cette Knowledge Box.",
 	"stash.kb_name_invalid": "Nom de la Knowledge Box invalide",
 	"stash.kb_slug_invalid": "Limace de boîte de connaissances invalide",
@@ -793,7 +825,7 @@
 	"stash.settings.processes.training.active": "Il existe un entraînement actif que vous pouvez arrêter à tout moment. Vous recevrez un e-mail une fois celui-ci terminé.",
 	"stash.settings.processes.training.agreement": "J'accepte les frais occasionnés en sélectionnant cette option",
 	"stash.settings.processes.training.consult-history": "Consultez toutes les données et l'état des entraînements complétées ou en cours",
-	"stash.settings.processes.training.last_run": "Dernière exécution :  {{ runDate }}",
+	"stash.settings.processes.training.last_run": "Dernière exécution :  {{ runDate }}",
 	"stash.settings.processes.training.ner.contact": "En fonction de votre ensemble de données, cette formation peut ne pas être efficace. Afin d'évaluer si la formation NER est pertinente dans votre cas, veuillez <a href=\"mailto:{{email}}\">nous contacter</a>.",
 	"stash.settings.processes.training.no-resources": "La fonctionnalité d'entraînement n’est pas disponible sur les Knowledge Boxes vides.",
 	"stash.settings.processes.training.not-allowed": "La fonctionnalité de formation n'est pas disponible sur les comptes de base.",
@@ -803,10 +835,10 @@
 	"stash.settings.processes.training.select_all": "Tout sélectionner",
 	"stash.settings.processes.training.start": "Commence l'entraînement",
 	"stash.settings.processes.training.stop": "Arrêter l'entraînement",
-	"stash.settings.processes.training.time_requirement": "Le temps nécessaire pour s'entraîner est d'environ {{hours}}  heures qui seront soustraites des heures disponibles.",
-	"stash.state.label": "État : ",
-	"stash.state.private": "privé",
-	"stash.state.published": "public",
+	"stash.settings.processes.training.time_requirement": "Le temps nécessaire pour s'entraîner est d'environ {{hours}}  heures qui seront soustraites des heures disponibles.",
+	"stash.settings.status.label": "Statut",
+	"stash.settings.status.private": "La Knowledge Box est <strong>privée</strong>",
+	"stash.settings.status.published": "La Knowledge Box est <strong>publique</strong>",
 	"stash.stats": "Les données",
 	"stash.title": "Titre de la boîte",
 	"stash.upload.desktop.description": "La manière la plus simple et la plus rapide de charger des données dans Nuclia à partir de vos sources de données",
@@ -830,14 +862,6 @@
 	"stash.valid_domains_label": "Domaines à partir desquels des e-mails peuvent être envoyés",
 	"stash.valid_emails": "Ajoutez, séparées par des virgules, les adresses emails des sorcières qui seront acceptées.",
 	"stash.valid_emails_label": "Courriels",
-	"stats.endpoint": "NucliaDB API endpoint",
-	"stats.get_started": "Commencer",
-	"stats.processing_time": "Temps de traitement",
-	"stats.total.fields": "Champs",
-	"stats.total.paragraphs": "Blocs de texte",
-	"stats.total.sentences": "Vecteurs",
-	"stats.total.title": "Ressources",
-	"stats.total_search": "Nombre total de recherches",
 	"synonyms.add-form.bidirectional-checkbox": "Bidirectionnel",
 	"synonyms.add-form.main-word-label": "Mot principal",
 	"synonyms.add-form.synonyms-label": "Synonymes séparés par des virgules",
