--- a/libs/user/src/assets/i18n/en.json
+++ b/libs/user/src/assets/i18n/en.json
@@ -29,6 +29,7 @@
 	"login.google-workspace": "Google Workspace",
 	"login.have_account": "Don’t have an account?",
 	"login.login": "Log in",
+	"login.onboarding-disabled": "Account creation is disabled for now, it will be back soon.",
 	"login.password": "Password",
 	"login.recover": "Recover password",
 	"login.recover_help": "Problems logging in?",
