--- a/libs/user/src/assets/i18n/es.json
+++ b/libs/user/src/assets/i18n/es.json
@@ -29,6 +29,7 @@
 	"login.google-workspace": "Google Workspace",
 	"login.have_account": "¿No tienes una cuenta?",
 	"login.login": "Iniciar sesión",
+	"login.onboarding-disabled": "La creación de cuenta está deshabilitada por ahora, volverá pronto.",
 	"login.password": "Contraseña",
 	"login.recover": "Recuperar contraseña",
 	"login.recover_help": "Problemas con la contraseña?",
