Put account creation under feature flag (#1211)
* Put account creation under feature flag

* Better message

* Bad translations

--- a/libs/user/src/assets/i18n/en.json
+++ b/libs/user/src/assets/i18n/en.json
@@ -29,6 +29,7 @@
 	"login.google-workspace": "Google Workspace",
 	"login.have_account": "Don’t have an account?",
 	"login.login": "Log in",
+	"login.onboarding-disabled": "Account creation is temporarily disabled as part of a maintenance operation. It will be restored quickly.",
 	"login.password": "Password",
 	"login.recover": "Recover password",
 	"login.recover_help": "Problems logging in?",
