--- a/libs/user/src/assets/i18n/fr.json
+++ b/libs/user/src/assets/i18n/fr.json
@@ -29,6 +29,7 @@
 	"login.google-workspace": "Google Workspace",
 	"login.have_account": "Vous n’avez pas de compte ?",
 	"login.login": "Se connecter",
+	"login.onboarding-disabled": "La création de compte est temporairement désactivée dans le cadre d'une opération de maintenance. Elle sera rétablie rapidement.",
 	"login.password": "Mot de passe",
 	"login.recover": "Récupérer mon mot de passe",
 	"login.recover_help": "Problèmes de connexion ?",
